fix extra space above header in practice page, make header-title responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,33 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+} */
+
 .header {
   background-color: rgba(255, 255, 255, 0.2);
-  position: relative;
+  /* position: relative; */
   z-index: 10;
   padding: 1rem 2rem;
   color: inherit;
+
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .header-title {
   color: rgb(90, 17, 17);
-  font-size: 5.5rem;
+  font-size: 1em;
   font-weight: bold;
   font-family: "Noto Serif SC", serif;
+  text-align: center;
+  margin: 0;
 }
 
 .app-container {
@@ -18,10 +35,11 @@
   top: 0;
   left: 0;
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  margin: 0;
 }
 
 /*----------------Home-----------------------------------------------*/
@@ -36,7 +54,7 @@
 
 /* Button Styles */
 .level-btn {
-  background-color: #a94444; /* Lacquer red */
+  background-color: #a94444;
   color: #fff;
   font-weight: bold;
   padding: 8px 16px;
@@ -92,7 +110,6 @@
   z-index: 10;
 }
 
-/* Centered carousel */
 .centered-carousel {
   display: flex;
   gap: 20px;
@@ -100,7 +117,6 @@
   padding: 10px 0;
 }
 
-/* Glowing effect for selected level */
 .level-btn {
   padding: 10px 20px;
   border: none;
@@ -119,7 +135,6 @@
     0 0 20px 5px rgba(255, 215, 0, 0.5);
 }
 
-/* Deck carousel */
 .deck-carousel {
   display: flex;
   align-items: center;
@@ -160,7 +175,10 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  z-index: -1;
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .question-container {
@@ -287,7 +305,7 @@
   }
 
   .header-title {
-    font-size: 0.5rem;
+    font-size: 1.1rem;
   }
 
   .grid-container {
@@ -313,6 +331,10 @@
 }
 
 @media (min-width: 601px) {
+  .header-title {
+    font-size: 1.3rem;
+  }
+
   .grid-container {
     margin-top: 2em;
     width: 55vw;
@@ -327,6 +349,10 @@
 }
 
 @media (min-width: 1025px) {
+  .header-title {
+    font-size: 1.7rem;
+  }
+
   .question-container {
     margin-top: 3em;
   }
@@ -362,6 +388,10 @@
 }
 
 @media (min-width: 1225px) {
+  .header-title {
+    font-size: 2em;
+  }
+
   .grid-container {
     width: 55vw;
     height: auto;
